--- a/src/lesson5/javafx/view/main-form.fxml
+++ b/src/lesson5/javafx/view/main-form.fxml
@@ -1,13 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField layoutX="365.0" layoutY="265.0" />
-      <Button layoutX="117.0" layoutY="106.0" mnemonicParsing="false" text="Button" />
+      <MenuBar>
+        <menus>
+          <Menu mnemonicParsing="false" text="Таблицы">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Автомобили" />
+                  <MenuItem mnemonicParsing="false" text="Двигатели" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <TabPane tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+        <tabs>
+          <Tab text="Автомобили">
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <HBox VBox.vgrow="ALWAYS">
+                           <children>
+                              <TableView HBox.hgrow="ALWAYS">
+                                <columns>
+                                  <TableColumn prefWidth="116.0" text="Модель" />
+                                  <TableColumn prefWidth="70.0" text="КПП" />
+                                    <TableColumn prefWidth="90.0" text="Масса" />
+                                </columns>
+                              </TableView>
+                              <TitledPane animated="false" maxHeight="1.7976931348623157E308" text="Двигатель">
+                                 <content>
+                                    <GridPane hgap="10.0" vgap="10.0">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints />
+                                        <RowConstraints />
+                                        <RowConstraints />
+                                      </rowConstraints>
+                                       <children>
+                                          <Label text="Тип" />
+                                          <Label text="Мощность" GridPane.rowIndex="1" />
+                                          <Label text="Объём" GridPane.rowIndex="2" />
+                                          <TextField GridPane.columnIndex="1" />
+                                          <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                       </children>
+                                    </GridPane>
+                                 </content>
+                              </TitledPane>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </content>
+          </Tab>
+          <Tab text="Двигатели">
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <TableView>
+                          <columns>
+                            <TableColumn prefWidth="75.0" text="Тип" />
+                            <TableColumn prefWidth="75.0" text="Мощность" />
+                              <TableColumn prefWidth="75.0" text="Объем" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </VBox>
+               </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
-</AnchorPane>
+</VBox>
