--- a/src/lesson5/javafx/view/main-form.fxml
+++ b/src/lesson5/javafx/view/main-form.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -15,9 +17,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lesson5.javafx.MainFormController">
    <children>
       <MenuBar>
         <menus>
@@ -35,6 +37,19 @@
                <content>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
+                        <HBox spacing="8.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#onAdd" text="Добавить" />
+                              <Button mnemonicParsing="false" text="Удалить" />
+                              <Button mnemonicParsing="false" text="Изменить" />
+                           </children>
+                           <padding>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </padding>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </HBox>
                         <HBox VBox.vgrow="ALWAYS">
                            <children>
                               <TableView HBox.hgrow="ALWAYS">
@@ -44,12 +59,12 @@
                                     <TableColumn prefWidth="90.0" text="Масса" />
                                 </columns>
                               </TableView>
-                              <TitledPane animated="false" maxHeight="1.7976931348623157E308" text="Двигатель">
+                              <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" text="Двигатель">
                                  <content>
                                     <GridPane hgap="10.0" vgap="10.0">
                                       <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" />
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="100.0" />
                                       </columnConstraints>
                                       <rowConstraints>
                                         <RowConstraints />
@@ -66,6 +81,9 @@
                                        </children>
                                     </GridPane>
                                  </content>
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font>
                               </TitledPane>
                            </children>
                         </HBox>
@@ -77,11 +95,22 @@
                <content>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <TableView>
+                        <HBox spacing="8.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#onAddEngine" text="Добавить" />
+                              <Button mnemonicParsing="false" onAction="#onDeleteEngine" text="Удалить" />
+                              <Button mnemonicParsing="false" onAction="#onEditEngine" text="Изменить" />
+                           </children>
+                           <padding>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </padding>
+                        </HBox>
+                        <TableView fx:id="enginesTable" VBox.vgrow="ALWAYS">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="Тип" />
-                            <TableColumn prefWidth="75.0" text="Мощность" />
-                              <TableColumn prefWidth="75.0" text="Объем" />
+                              <TableColumn fx:id="numberCol" prefWidth="75.0" text="Номер" />
+                            <TableColumn fx:id="typeCol" prefWidth="75.0" text="Тип" />
+                            <TableColumn fx:id="powerCol" prefWidth="75.0" text="Мощность" />
+                              <TableColumn fx:id="volumeCol" prefWidth="75.0" text="Объем" />
                           </columns>
                         </TableView>
                      </children>
